--- a/programs/linux/CMakeLists.txt
+++ b/programs/linux/CMakeLists.txt
@@ -5,7 +5,9 @@ find_package(OpenCV REQUIRED)
 # Include directories
 include_directories (/usr/include/tesseract)
 # Link directories
+find_package(YARP REQUIRED)
 link_directories (/usr/lib)
-# Target link libaries
+# Target link libraries
 target_link_libraries (ocr lept tesseract)
 target_link_libraries(ocr ${OpenCV_LIBS})
+target_link_libraries(ocr ${YARP_LIBRARIES})
