--- a/.travis.yml
+++ b/.travis.yml
@@ -50,6 +50,12 @@ install:
   - sudo apt-get install libtiff5-dev
   - sudo apt-get install zlib1g-dev
 
+# Instalar YARP
+
+  - sudo sh -c 'echo "deb http://www.icub.org/ubuntu trusty contrib/science" > /etc/apt/sources.list.d/icub.list'
+  - sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 57A5ACB6110576A6
+  - sudo apt-get update
+  - sudo apt-get install yarp
 
 # Instalar tesseract
 
